# Android-CPU-Draw

./: CMakeLists.txt  README.md  build.sh
include/core/: Utils.h  VectorStruct.h  spinlock.h
include/graphics/: DrawList.h  Primitives.h
include/input/: TouchHelper.h
include/platform/: ANativeWindowCreator.h
include/text/: TextRenderer.h
include/ui/: FloatingMenu.h  UIWidget.h
src/: main.cpp
src/graphics/: DrawList.cpp  Primitives.cpp
src/input/: TouchHelper.cpp
src/text/: TextRenderer.cpp
src/ui/: FloatingMenu.cpp  UIWidget.cpp
